# clp_fork

./: .gitignore  Taskfile.yml
components/clp-package-utils/clp_package_utils/: general.py
components/clp-package-utils/clp_package_utils/scripts/: compress.py  ir.py  start_clp.py
components/clp-py-utils/clp_py_utils/: clp_config.py  create-db-tables.py  initialize-clp-metadata-db.py  initialize-orchestration-db.py  initialize-results-cache.py  s3_utils.py
components/core/: CMakeLists.txt  log_float
components/core/src/: Defs.h  EncodedMessageParser.cpp  EncodedMessageParser.hpp  EncodedParsedMessage.cpp  EncodedParsedMessage.hpp  EncodedVariableInterpreter.cpp  EncodedVariableInterpreter.hpp  Grep.cpp  Grep.hpp  IRMessageParser.cpp  IRMessageParser.hpp  LogTypeDictionaryEntry.cpp  LogTypeDictionaryEntry.hpp  ParsedIRMessage.cpp  ParsedIRMessage.hpp  Query.cpp  Query.hpp  TimestampPattern.cpp  Utils.cpp  Utils.hpp
components/core/src/clg/: clg.cpp
components/core/src/clo/: clo.cpp
components/core/src/clp/: CommandLineArguments.cpp  CommandLineArguments.hpp  FileCompressor.cpp  FileCompressor.hpp  FileDecompressor.cpp  FileDecompressor.hpp  FileReader.hpp  GLTFileDecompressor.cpp  GLTFileDecompressor.hpp  IRDecompressor.cpp  IRDecompressor.hpp  STDIRDecompressor.cpp  (+5 more)
components/core/tests/: test-BufferedFileReader.cpp
components/log-viewer-webui/server/: .env  package.json
components/remote-fuse-layer/: README.md  pyproject.toml
components/remote-fuse-layer/remote_fuse_layer/: s3.py
tools/docker-images/clp-execution-base-jammy/: Dockerfile  build.sh
(+135 files in other folders)
