[project]
requires-python = ">= 3.8"

[tool.poetry]
name = "remote-fuse-layer"
version = "0.0.1-dev"
description = "Utilities for S3 access"
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.10"
# mariadb version must be compatible with libmariadev installed in runtime env.
# See https://mariadb.com/docs/server/connect/programming-languages/python/install/#Dependencies
diskcache = "^5.6.3"
fusepy = "^3.0.1"
boto3 = "^1.34.36"
s3path = "^0.5.2"
smart-open = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
